[package]
name = "curve25519-benches"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.11.0", features = ["derive"] }
curve25519-dalek = { version = "3.2.1", features = ["serde"] }
thiserror = "1.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "curve25519"
harness = false
